# path_follow

./: README.md
install/: local_setup.sh  setup.sh
install/path_follow/lib/path_follow/: path_follow
install/path_follow/share/path_follow/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/path_follow/share/path_follow/launch/: path_follow.launch.py
install/path_follow_interface/include/path_follow_interface/msg/: interface.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/path_follow_interface/share/path_follow_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/path_follow_interface/share/path_follow_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  (+5 more)
log/: latest_build  latest_list
src/path_follow/: CMakeLists.txt  cdcr_config.yaml  package.xml
src/path_follow/data/: .~lock.per_radius_max_deviation_1.xlsx#  per_fitperiod_max_deviation.xlsx  per_fitperiod_theta_value  per_fitperiod_theta_value.xlsx  per_fitperiod_theta_value_11  per_fitperiod_theta_value_7  per_radius_max_deviation_1.xlsx  per_radius_max_deviation_nodirection.xlsx
src/path_follow/launch/: path_follow.launch.py
src/path_follow/src/: cdcr.cpp  cdcr.hpp  joint.cpp  joint.hpp  main.cpp  path_follow.hpp  path_follow.rviz  uniform_bspline.cpp  uniform_bspline.hpp
src/path_follow/temp/: .~lock.arc_radius.xlsx#  arc_radius_nodirection.xlsx  per_fitperiod_max_deviation.xlsx  per_fitperiod_theta_value  per_fitperiod_theta_value.xlsx  per_radius_fit_time.xlsx  per_radius_max_deviation.xlsx
src/path_follow_interface/: CMakeLists.txt  package.xml
(+12 files in other folders)
